# vulkan_tutorial

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  nvidia_lsan.supp  vcpkg.json
cmake/: compile_shaders.cmake
src/: HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  HelloTriangleApplication.ixx  OldHelloTriangleApplication.ixx  dlclose.cpp  main.cpp
src/shaders/: triangle.frag  triangle.vert
